<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson2.ShoppingListActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@drawable/stroke"
                android:gravity="center"
                android:text="@string/empty"
                android:textAlignment="gravity"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="openShop"
        android:text="@string/add_item"
        app:layout_constraintBottom_toTopOf="@+id/locateStoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/locateStoreButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/locateStoreButton" />

    <Button
        android:id="@+id/locateStoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/locate_store"
        android:onClick="locateStore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>